@@ -397,6 +397,12 @@ hc08_dwarfRegNum (const struct reg_info *reg)
   return -1;
 }
 
+static bool
+_hasNativeMulFor (iCode *ic, sym_link *left, sym_link *right)
+{
+  return getSize (left) == 1 && getSize (right) == 1;
+}
+
 typedef struct asmLineNode
   {
     int size;
@@ -834,9 +840,8 @@ PORT hc08_port =
     0,          /* banked_overhead (switch between code banks) */
     1           /* sp is offset by 1 from last item pushed */
   },
-    /* hc08 has an 8 bit mul */
   {
-    1, 5, FALSE
+    5, FALSE
   },
   {
     hc08_emitDebuggerSymbol,
@@ -880,7 +885,7 @@ PORT hc08_port =
   _hc08_regparm,
   NULL,                         /* process_pragma */
   NULL,                         /* getMangledFunctionName */
-  NULL,                         /* hasNativeMulFor */
+  _hasNativeMulFor,             /* hasNativeMulFor */
   hasExtBitOp,                  /* hasExtBitOp */
   oclsExpense,                  /* oclsExpense */
   TRUE,                         /* use_dw_for_init */
@@ -980,9 +985,8 @@ PORT s08_port =
     0,          /* banked_overhead (switch between code banks) */
     1           /* sp is offset by 1 from last item pushed */
   },
-    /* hc08 has an 8 bit mul */
   {
-    1, 5, FALSE
+    5, FALSE
   },
   {
     hc08_emitDebuggerSymbol,
@@ -1026,7 +1030,7 @@ PORT s08_port =
   _hc08_regparm,
   NULL,                         /* process_pragma */
   NULL,                         /* getMangledFunctionName */
-  NULL,                         /* hasNativeMulFor */
+  _hasNativeMulFor,             /* hasNativeMulFor */
   hasExtBitOp,                  /* hasExtBitOp */
   oclsExpense,                  /* oclsExpense */
   TRUE,                         /* use_dw_for_init */
